--- a/Lecture_BDD/LectureProfile.ui
+++ b/Lecture_BDD/LectureProfile.ui
@@ -26,7 +26,7 @@
     <item>
      <widget class="QLabel" name="label_2">
       <property name="text">
-       <string>TextLabel</string>
+       <string>Prix</string>
       </property>
      </widget>
     </item>
@@ -38,8 +38,8 @@
   <widget class="QWidget" name="verticalLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>40</y>
+     <x>10</x>
+     <y>10</y>
      <width>221</width>
      <height>521</height>
     </rect>
@@ -68,12 +68,12 @@
         </item>
         <item>
          <property name="text">
-          <string>Skavens</string>
+          <string>Hommes betes</string>
          </property>
         </item>
         <item>
          <property name="text">
-          <string>Hommes betes</string>
+          <string>Skavens</string>
          </property>
         </item>
        </widget>
@@ -84,6 +84,16 @@
      <widget class="QTreeView" name="treeView"/>
     </item>
    </layout>
+  </widget>
+  <widget class="QTableView" name="tableView">
+   <property name="geometry">
+    <rect>
+     <x>250</x>
+     <y>160</y>
+     <width>311</width>
+     <height>51</height>
+    </rect>
+   </property>
   </widget>
  </widget>
  <resources/>
