Ajout d'une Font
Ajout de la Police First Order est ajout de celle ci dans la database
des font Qt
Elle peut ainsi etre utiliser dans tous le programme comme dans
acceuil.cpp

--- a/Lecture_BDD/acceuil.ui
+++ b/Lecture_BDD/acceuil.ui
@@ -15,6 +15,13 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
+    <widget class="QLabel" name="label">
+     <property name="text">
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:24pt;&quot;&gt;Mordheim&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     </property>
+    </widget>
+   </item>
+   <item>
     <widget class="QPushButton" name="pushButton_Profil">
      <property name="toolTip">
       <string extracomment="Ajouter ou modifier une unité">Ajouter ou modifier une unité</string>
