Requete pour regles speciales
Rajout de la  fonction pour changer la liste des regles speciales.

--- a/Lecture_BDD/LectureProfile.ui
+++ b/Lecture_BDD/LectureProfile.ui
@@ -13,63 +13,13 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <widget class="QWidget" name="verticalLayoutWidget">
-   <property name="geometry">
-    <rect>
-     <x>9</x>
-     <y>9</y>
-     <width>258</width>
-     <height>222</height>
-    </rect>
-   </property>
-   <layout class="QVBoxLayout" name="verticalLayout">
-    <item>
-     <layout class="QHBoxLayout" name="horizontalLayout">
-      <item>
-       <widget class="QLabel" name="label_race">
-        <property name="text">
-         <string>Race</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QComboBox" name="comboBox">
-        <item>
-         <property name="text">
-          <string>Nains</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>Orques</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>Hommes betes</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>Skavens</string>
-         </property>
-        </item>
-       </widget>
-      </item>
-     </layout>
-    </item>
-    <item>
-     <widget class="QTreeView" name="treeView"/>
-    </item>
-   </layout>
-  </widget>
   <widget class="QGroupBox" name="groupBox">
    <property name="geometry">
     <rect>
-     <x>280</x>
-     <y>10</y>
-     <width>261</width>
-     <height>231</height>
+     <x>285</x>
+     <y>9</y>
+     <width>270</width>
+     <height>251</height>
     </rect>
    </property>
    <property name="title">
@@ -111,6 +61,76 @@
      </item>
     </layout>
    </widget>
+  </widget>
+  <widget class="QWidget" name="verticalLayoutWidget">
+   <property name="geometry">
+    <rect>
+     <x>249</x>
+     <y>290</y>
+     <width>241</width>
+     <height>281</height>
+    </rect>
+   </property>
+   <layout class="QVBoxLayout" name="verticalLayout">
+    <item>
+     <widget class="QLabel" name="label_regles">
+      <property name="text">
+       <string>Regles Speciales</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QListView" name="listView_regles"/>
+    </item>
+    <item>
+     <widget class="QTextBrowser" name="textBrowser_regles"/>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QWidget" name="">
+   <layout class="QHBoxLayout" name="horizontalLayout">
+    <item>
+     <widget class="QLabel" name="label_race">
+      <property name="text">
+       <string>Race</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QComboBox" name="comboBox">
+      <item>
+       <property name="text">
+        <string>Nains</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Orques</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Hommes betes</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Skavens</string>
+       </property>
+      </item>
+     </widget>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QTreeView" name="treeView">
+   <property name="geometry">
+    <rect>
+     <x>9</x>
+     <y>37</y>
+     <width>270</width>
+     <height>164</height>
+    </rect>
+   </property>
   </widget>
  </widget>
  <resources/>
