--- a/Lecture_BDD/LectureProfile.ui
+++ b/Lecture_BDD/LectureProfile.ui
@@ -16,10 +16,10 @@
   <widget class="QGroupBox" name="groupBox">
    <property name="geometry">
     <rect>
-     <x>285</x>
+     <x>214</x>
      <y>9</y>
-     <width>270</width>
-     <height>251</height>
+     <width>341</width>
+     <height>571</height>
     </rect>
    </property>
    <property name="title">
@@ -30,7 +30,7 @@
      <rect>
       <x>10</x>
       <y>30</y>
-      <width>241</width>
+      <width>301</width>
       <height>191</height>
      </rect>
     </property>
@@ -61,33 +61,41 @@
      </item>
     </layout>
    </widget>
+   <widget class="QWidget" name="verticalLayoutWidget">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>250</y>
+      <width>301</width>
+      <height>281</height>
+     </rect>
+    </property>
+    <layout class="QVBoxLayout" name="verticalLayout">
+     <item>
+      <widget class="QLabel" name="label_regles">
+       <property name="text">
+        <string>Regles Speciales</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QListView" name="listView_regles"/>
+     </item>
+     <item>
+      <widget class="QTextEdit" name="textEdit_regles"/>
+     </item>
+    </layout>
+   </widget>
   </widget>
-  <widget class="QWidget" name="verticalLayoutWidget">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
-     <x>249</x>
-     <y>290</y>
-     <width>241</width>
-     <height>281</height>
+     <x>20</x>
+     <y>10</y>
+     <width>128</width>
+     <height>22</height>
     </rect>
    </property>
-   <layout class="QVBoxLayout" name="verticalLayout">
-    <item>
-     <widget class="QLabel" name="label_regles">
-      <property name="text">
-       <string>Regles Speciales</string>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <widget class="QListView" name="listView_regles"/>
-    </item>
-    <item>
-     <widget class="QTextBrowser" name="textBrowser_regles"/>
-    </item>
-   </layout>
-  </widget>
-  <widget class="QWidget" name="">
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
      <widget class="QLabel" name="label_race">
@@ -127,8 +135,8 @@
     <rect>
      <x>9</x>
      <y>37</y>
-     <width>270</width>
-     <height>164</height>
+     <width>171</width>
+     <height>551</height>
     </rect>
    </property>
   </widget>
