Barre de recherche
Création de la barre de recherche pour retrouver la référence, il
faudras l'associer a un combobox pour definir le type de la recherche

--- a/Lecture_BDD/LectureProfile.ui
+++ b/Lecture_BDD/LectureProfile.ui
@@ -106,6 +106,9 @@
     </item>
     <item>
      <widget class="QComboBox" name="comboBox">
+      <property name="editable">
+       <bool>false</bool>
+      </property>
       <item>
        <property name="text">
         <string>Nains</string>
