--- a/Lecture_BDD/dockwidgetlistemembrebande.ui
+++ b/Lecture_BDD/dockwidgetlistemembrebande.ui
@@ -6,19 +6,68 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>237</width>
-    <height>431</height>
+    <width>188</width>
+    <height>491</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>188</width>
+    <height>491</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>DockWidget</string>
   </property>
   <widget class="QWidget" name="dockWidgetContents">
-   <layout class="QVBoxLayout" name="verticalLayout">
-    <item>
-     <widget class="QTreeView" name="treeView"/>
-    </item>
-   </layout>
+   <widget class="QGroupBox" name="groupBox">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>340</y>
+      <width>151</width>
+      <height>121</height>
+     </rect>
+    </property>
+    <property name="title">
+     <string>Recruter un Gars</string>
+    </property>
+    <widget class="QWidget" name="verticalLayoutWidget">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>20</y>
+       <width>121</width>
+       <height>91</height>
+      </rect>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout">
+      <item>
+       <widget class="QComboBox" name="comboBox"/>
+      </item>
+      <item>
+       <widget class="QComboBox" name="comboBox_2"/>
+      </item>
+      <item>
+       <widget class="QPushButton" name="pushButton_recruter">
+        <property name="text">
+         <string>Recruter</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </widget>
+   <widget class="QTreeView" name="treeView">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>10</y>
+      <width>161</width>
+      <height>321</height>
+     </rect>
+    </property>
+   </widget>
   </widget>
  </widget>
  <resources/>
