--- a/Lecture_BDD/widgetvueprofil.ui
+++ b/Lecture_BDD/widgetvueprofil.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>588</width>
-    <height>241</height>
+    <width>582</width>
+    <height>233</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -77,7 +77,7 @@
     <rect>
      <x>10</x>
      <y>0</y>
-     <width>341</width>
+     <width>481</width>
      <height>31</height>
     </rect>
    </property>
@@ -88,6 +88,19 @@
        <string>Nom</string>
       </property>
      </widget>
+    </item>
+    <item>
+     <spacer name="horizontalSpacer_2">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>40</width>
+        <height>20</height>
+       </size>
+      </property>
+     </spacer>
     </item>
     <item>
      <widget class="QLineEdit" name="lineEdit"/>
