--- a/Lecture_BDD/dialog_parametre_bande.ui
+++ b/Lecture_BDD/dialog_parametre_bande.ui
@@ -6,13 +6,13 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>289</width>
+    <width>296</width>
     <height>241</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>289</width>
+    <width>296</width>
     <height>241</height>
    </size>
   </property>
@@ -71,7 +71,18 @@
           </widget>
          </item>
          <item>
-          <widget class="QComboBox" name="comboBox_race"/>
+          <widget class="QComboBox" name="comboBox_race">
+           <item>
+            <property name="text">
+             <string>Nains</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>Orques</string>
+            </property>
+           </item>
+          </widget>
          </item>
         </layout>
        </item>
@@ -95,36 +106,8 @@
          </item>
         </layout>
        </item>
-       <item>
-        <spacer name="verticalSpacer">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>20</width>
-           <height>40</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-       <item>
-        <layout class="QVBoxLayout" name="verticalLayout_2">
-         <item>
-          <widget class="QDialogButtonBox" name="buttonBox">
-           <property name="orientation">
-            <enum>Qt::Horizontal</enum>
-           </property>
-           <property name="standardButtons">
-            <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
-           </property>
-          </widget>
-         </item>
-        </layout>
-       </item>
       </layout>
       <zorder>verticalLayoutWidget</zorder>
-      <zorder></zorder>
       <zorder></zorder>
       <zorder></zorder>
       <zorder></zorder>
@@ -133,7 +116,32 @@
       <attribute name="title">
        <string>Voir / Modifier une bande</string>
       </attribute>
+      <layout class="QVBoxLayout" name="verticalLayout_5">
+       <item>
+        <widget class="QLabel" name="label_2">
+         <property name="text">
+          <string>choisir une bande a voir</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QListView" name="listView"/>
+       </item>
+      </layout>
      </widget>
+    </widget>
+   </item>
+   <item>
+    <widget class="QDialogButtonBox" name="buttonBox">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="standardButtons">
+      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+     </property>
     </widget>
    </item>
   </layout>
