--- a/Lecture_BDD/dockwidgetlistemembrebande.ui
+++ b/Lecture_BDD/dockwidgetlistemembrebande.ui
@@ -6,13 +6,13 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>188</width>
+    <width>227</width>
     <height>491</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>188</width>
+    <width>227</width>
     <height>491</height>
    </size>
   </property>
@@ -20,54 +20,36 @@
    <string>DockWidget</string>
   </property>
   <widget class="QWidget" name="dockWidgetContents">
-   <widget class="QGroupBox" name="groupBox">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>340</y>
-      <width>151</width>
-      <height>121</height>
-     </rect>
-    </property>
-    <property name="title">
-     <string>Recruter un Gars</string>
-    </property>
-    <widget class="QWidget" name="verticalLayoutWidget">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
-       <y>20</y>
-       <width>121</width>
-       <height>91</height>
-      </rect>
-     </property>
-     <layout class="QVBoxLayout" name="verticalLayout">
-      <item>
-       <widget class="QComboBox" name="comboBox"/>
-      </item>
-      <item>
-       <widget class="QComboBox" name="comboBox_2"/>
-      </item>
-      <item>
-       <widget class="QPushButton" name="pushButton_recruter">
-        <property name="text">
-         <string>Recruter</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </widget>
-   </widget>
-   <widget class="QTreeView" name="treeView">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>10</y>
-      <width>161</width>
-      <height>321</height>
-     </rect>
-    </property>
-   </widget>
+   <layout class="QVBoxLayout" name="verticalLayout">
+    <item>
+     <widget class="QComboBox" name="comboBox_race"/>
+    </item>
+    <item>
+     <widget class="QGroupBox" name="groupBox">
+      <property name="title">
+       <string>Recruter un Gars</string>
+      </property>
+      <layout class="QVBoxLayout" name="verticalLayout_2">
+       <item>
+        <widget class="QComboBox" name="comboBox_rang"/>
+       </item>
+       <item>
+        <widget class="QComboBox" name="comboBox_unite"/>
+       </item>
+       <item>
+        <widget class="QPushButton" name="pushButton_recruter">
+         <property name="text">
+          <string>Recruter</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+    </item>
+    <item>
+     <widget class="QTreeView" name="treeView"/>
+    </item>
+   </layout>
   </widget>
  </widget>
  <resources/>
