--- a/Lecture_BDD/widgetvueprofil.ui
+++ b/Lecture_BDD/widgetvueprofil.ui
@@ -131,9 +131,6 @@
    <item row="2" column="0">
     <widget class="QTableView" name="tableView_caracteristiques"/>
    </item>
-   <item row="2" column="1">
-    <widget class="QListView" name="listView_capacites"/>
-   </item>
    <item row="4" column="0">
     <layout class="QVBoxLayout" name="verticalLayout_2">
      <item>
@@ -165,6 +162,9 @@
       </widget>
      </item>
     </layout>
+   </item>
+   <item row="2" column="1">
+    <widget class="QTableView" name="tableView_capacites"/>
    </item>
   </layout>
  </widget>
