--- a/Lecture_BDD/dialog_parametre_bande.ui
+++ b/Lecture_BDD/dialog_parametre_bande.ui
@@ -23,7 +23,7 @@
    <item>
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
-      <number>0</number>
+      <number>1</number>
      </property>
      <widget class="QWidget" name="tab_creationBande">
       <attribute name="title">
@@ -107,8 +107,7 @@
         </layout>
        </item>
       </layout>
-      <zorder>verticalLayoutWidget</zorder>
-      <zorder></zorder>
+      <zorder>label</zorder>
       <zorder></zorder>
       <zorder></zorder>
      </widget>
@@ -118,7 +117,7 @@
       </attribute>
       <layout class="QVBoxLayout" name="verticalLayout_5">
        <item>
-        <widget class="QLabel" name="label_2">
+        <widget class="QLabel" name="label_choixBande">
          <property name="text">
           <string>choisir une bande a voir</string>
          </property>
@@ -128,7 +127,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QListView" name="listView"/>
+        <widget class="QListView" name="listView_choixBande"/>
        </item>
       </layout>
      </widget>
